Rename AWAY section to PROJECT R

--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
                         </div>
                     </div>
                     <div class="wfh-zone" data-day="${day}">
-                        <h3>🏠 AWAY (${wfhPeople.length})</h3>
+                        <h3>PROJECT R (${wfhPeople.length})</h3>
                     </div>
                     <div class="in-office-list">
                         <h3>In Office (${officePeople.length})</h3>
